[tool.poetry]
name = "advsteg-pytorch"
version = "0.1.0"
description = "Generating Steganographic Images via Adversarial Training"
authors = ["spencerwooo <spencer.woo@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.6.0"
wandb = "^0.13.5"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
ruff = "^0.0.163"
isort = "^5.10.1"
mypy = "^0.991"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.mypy]
allow_redefinition = true
no_implicit_optional = true
warn_redundant_casts = true
ignore_missing_imports = true
